# omniblue

./: README.md
Omniblue Launch/: command_to_start  fastdds.xml  fastdds.xml.bak  launch_script_patch.sh  omniblue.rviz  omniblue_Claude.rviz  omniblue_combined.rviz  omniblue_start.sh  slam_sim_launch.py  slam_toolbox_omniblue.yaml  slam_toolbox_sim.yaml
gazebo_mecanum_plugins/: CMakeLists.txt  package.xml
gazebo_mecanum_plugins/include/gazebo_mecanum_plugins/: formation_config.hpp  gazebo_mecanum_drive.h  gazebo_mecanum_drive_private.h
gazebo_mecanum_plugins/src/: formation_manager.cpp  formation_smc_controller.cpp  gazebo_mecanum_drive.cpp  gazebo_mecanum_pid_drive.cpp  omniblue_mpc_controller.cpp  omniblue_smc_controller.cpp
omniblue_description/: CMakeLists.txt  package.xml
omniblue_description/launch/: omniblue_demo.launch.py  omniblue_description.launch.py
omniblue_description/urdf/: materials.xacro  omniblue.urdf.xacro  omniblue.urdf（复件）.xacro  omniblue_plugin.gazebo  omniblue_plugin（复件）.gazebo  omniblue_roller.gazebo  omniblue_roller.urdf.xacro  omniblue_wheel.gazebo  omniblue_wheel_LF.urdf.xacro  omniblue_wheel_LR.urdf.xacro  omniblue_wheel_RF.urdf.xacro  omniblue_wheel_RR.urdf.xacro
omniblue_gazebo/: CMakeLists.txt  package.xml
omniblue_gazebo/launch/: empty_world.launch.py  omniblue_smc.launch.py  one_omniblue.launch.py  one_omniblue_deliever.launch.py  one_omniblue_one_actor.launch.py  one_omniblue_warehouse.launch.py  three_omniblue.launch.py  three_omniblue_formation.launch.py  three_omniblue_warehouse.launch.py  two_omniblue.launch.py  two_omniblue_warehouse.launch.py
omniblue_gazebo/rviz/: actor_lidar.rviz
omniblue_gazebo/world/: deliever_environment.world  empty_withActor.world  warehouse_small.world  warehouse_withActor.world  warehouse_withoutActor.world
omniblue_mapping/: CMakeLists.txt  package.xml
omniblue_mapping/launch/: localization.launch.py  save_map.launch.py  slam_toolbox.launch.py
omniblue_navigation/: CMakeLists.txt  package.xml
omniblue_navigation/config/: omniblue1_cartographer_move_base.yaml  omniblue1_lds_2d_localization_withoutmap.lua  omniblue1_lds_2d_withoutmap.lua  omniblue2_cartographer_move_base.yaml  omniblue2_lds_2d_localization_withoutmap.lua  omniblue2_lds_2d_withoutmap.lua  omniblue3_cartographer_move_base.yaml  omniblue3_lds_2d_localization_withoutmap.lua  omniblue3_lds_2d_withoutmap.lua  one_omniblue_cartographer_move_base.yaml  one_omniblue_lds_2d_localization_withoutmap.lua  one_omniblue_lds_2d_withoutmap.lua
omniblue_navigation/launch/: one_omniblue_cartographer_navigation2_withoutmap.launch.py  three_omniblue_cartographer_navigation2_withoutmap.launch.py  two_omniblue_cartographer_navigation2_withoutmap.launch.py
omniblue_navigation/rviz/: multi_omniblue_cartographer_navigation2.rviz  one_omniblue_cartographer_navigation2.rviz  three_omniblue_cartographer_navigation2.rviz
omniblue_programing/: package.xml  setup.cfg  setup.py
omniblue_programing/omniblue_programing/: omniblue_marked_move.py  omniblue_marker.py  omniblue_tsp_optimizer.py
omniblue_teleop/: package.xml  setup.cfg  setup.py
omniblue_teleop/omniblue_teleop/: omniblue_teleop_key.py
omniblue_tools/: package.xml  setup.cfg  setup.py
omniblue_tools/omniblue_tools/: go_to.py  go_to_odom.py
